--- a/modulo10/template-materialui/src/App.css
+++ b/modulo10/template-materialui/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #586787;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(240, 97, 97);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #11b1dd;
 }
 
 @keyframes App-logo-spin {
